Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -12,31 +12,28 @@
     </header>
     <main>
         <section id="games">
-            <h2>Juegos</h2>
+            <h2>Juegos de Telegram</h2>
             <ul>
                 <li>
-                    <a href="https://ejemplo.com/ref=tuLinkDeReferido1" target="_blank">Juego 1</a>
-                    <p>Descripción breve del Juego 1.</p>
+                    <img src="https://via.placeholder.com/50" alt="Tap Monsters Icon">
+                    <a href="https://t.me/tapmonsters_bot/start?startapp=ref1956860053" target="_blank">Tap Monsters</a>
+                    <p><a href="https://t.me/tapmonsters_bot/start?startapp=ref1956860053" target="_blank">https://t.me/tapmonsters_bot/start?startapp=ref1956860053</a></p>
                 </li>
                 <li>
-                    <a href="https://ejemplo.com/ref=tuLinkDeReferido2" target="_blank">Juego 2</a>
-                    <p>Descripción breve del Juego 2.</p>
-                </li>
-                <!-- Agrega más juegos aquí -->
-            </ul>
-        </section>
-        <section id="tools">
-            <h2>Herramientas</h2>
-            <ul>
-                <li>
-                    <a href="https://ejemplo.com/ref=tuLinkDeReferido3" target="_blank">Herramienta 1</a>
-                    <p>Descripción breve de la Herramienta 1.</p>
+                    <img src="https://via.placeholder.com/50" alt="Hamster Kombat Icon">
+                    <a href="https://t.me/hamsTer_kombat_bot/start?startapp=kentId1956860053" target="_blank">Hamster Kombat</a>
+                    <p><a href="https://t.me/hamsTer_kombat_bot/start?startapp=kentId1956860053" target="_blank">https://t.me/hamsTer_kombat_bot/start?startapp=kentId1956860053</a></p>
                 </li>
                 <li>
-                    <a href="https://ejemplo.com/ref=tuLinkDeReferido4" target="_blank">Herramienta 2</a>
-                    <p>Descripción breve de la Herramienta 2.</p>
+                    <img src="https://via.placeholder.com/50" alt="Kuroro Ranch Icon">
+                    <a href="https://t.me/KuroroRanchBot/ranch?startapp=ref-AA59F343" target="_blank">Kuroro Ranch</a>
+                    <p><a href="https://t.me/KuroroRanchBot/ranch?startapp=ref-AA59F343" target="_blank">https://t.me/KuroroRanchBot/ranch?startapp=ref-AA59F343</a></p>
                 </li>
-                <!-- Agrega más herramientas aquí -->
+                <li>
+                    <img src="https://via.placeholder.com/50" alt="Gamee Icon">
+                    <a href="https://t.me/gamee/start?startapp=ref_1956860053" target="_blank">Gamee</a>
+                    <p><a href="https://t.me/gamee/start?startapp=ref_1956860053" target="_blank">https://t.me/gamee/start?startapp=ref_1956860053</a></p>
+                </li>
             </ul>
         </section>
     </main>
