Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -1,44 +1,35 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mis Recomendaciones</title>
+    <title>My Crypto Games and Tools</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Mis Recomendaciones</h1>
-    </header>
-    <main>
-        <section id="games">
-            <h2>Juegos de Telegram</h2>
-            <ul>
-                <li>
-                    <img src="https://via.placeholder.com/50" alt="Tap Monsters Icon">
-                    <a href="https://t.me/tapmonsters_bot/start?startapp=ref1956860053" target="_blank">Tap Monsters</a>
-                    <p><a href="https://t.me/tapmonsters_bot/start?startapp=ref1956860053" target="_blank">https://t.me/tapmonsters_bot/start?startapp=ref1956860053</a></p>
-                </li>
-                <li>
-                    <img src="https://via.placeholder.com/50" alt="Hamster Kombat Icon">
-                    <a href="https://t.me/hamsTer_kombat_bot/start?startapp=kentId1956860053" target="_blank">Hamster Kombat</a>
-                    <p><a href="https://t.me/hamsTer_kombat_bot/start?startapp=kentId1956860053" target="_blank">https://t.me/hamsTer_kombat_bot/start?startapp=kentId1956860053</a></p>
-                </li>
-                <li>
-                    <img src="https://via.placeholder.com/50" alt="Kuroro Ranch Icon">
-                    <a href="https://t.me/KuroroRanchBot/ranch?startapp=ref-AA59F343" target="_blank">Kuroro Ranch</a>
-                    <p><a href="https://t.me/KuroroRanchBot/ranch?startapp=ref-AA59F343" target="_blank">https://t.me/KuroroRanchBot/ranch?startapp=ref-AA59F343</a></p>
-                </li>
-                <li>
-                    <img src="https://via.placeholder.com/50" alt="Gamee Icon">
-                    <a href="https://t.me/gamee/start?startapp=ref_1956860053" target="_blank">Gamee</a>
-                    <p><a href="https://t.me/gamee/start?startapp=ref_1956860053" target="_blank">https://t.me/gamee/start?startapp=ref_1956860053</a></p>
-                </li>
-            </ul>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Tu Nombre. Todos los derechos reservados.</p>
-    </footer>
+    <div class="container">
+        <header>
+            <h1>Welcome to My Crypto Games and Tools</h1>
+            <p>Check out these amazing Telegram games and tools!</p>
+        </header>
+        <main>
+            <div class="item">
+                <img src="https://example.com/tapmonsters-icon.png" alt="Tap Monsters Icon">
+                <a href="https://t.me/tapmonsters_bot/start?startapp=ref1956860053">Tap Monsters</a>
+            </div>
+            <div class="item">
+                <img src="https://example.com/hamsterkombat-icon.png" alt="Hamster Kombat Icon">
+                <a href="https://t.me/hamsTer_kombat_bot/start?startapp=kentId1956860053">Hamster Kombat</a>
+            </div>
+            <div class="item">
+                <img src="https://example.com/kurororanch-icon.png" alt="Kuroro Ranch Icon">
+                <a href="https://t.me/KuroroRanchBot/ranch?startapp=ref-AA59F343">Kuroro Ranch</a>
+            </div>
+            <div class="item">
+                <img src="https://example.com/gamee-icon.png" alt="Gamee Icon">
+                <a href="https://t.me/gamee/start?startapp=ref_1956860053">Gamee</a>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
