--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         </header>
         <main>
             <div class="item">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Yes_Check_Circle.svg/1200px-Yes_Check_Circle.svg.png" alt="Tap Monsters Icon">
+                <img src="https://via.placeholder.com/150" alt="Tap Monsters Icon">
                 <a href="https://t.me/tapmonsters_bot/start?startapp=ref1956860053">Tap Monsters</a>
             </div>
             <div class="item">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Yes_Check_Circle.svg/1200px-Yes_Check_Circle.svg.png" alt="Hamster Kombat Icon">
+                <img src="https://via.placeholder.com/150" alt="Hamster Kombat Icon">
                 <a href="https://t.me/hamsTer_kombat_bot/start?startapp=kentId1956860053">Hamster Kombat</a>
             </div>
             <div class="item">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Yes_Check_Circle.svg/1200px-Yes_Check_Circle.svg.png" alt="Kuroro Ranch Icon">
+                <img src="https://via.placeholder.com/150" alt="Kuroro Ranch Icon">
                 <a href="https://t.me/KuroroRanchBot/ranch?startapp=ref-AA59F343">Kuroro Ranch</a>
             </div>
             <div class="item">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Yes_Check_Circle.svg/1200px-Yes_Check_Circle.svg.png" alt="Gamee Icon">
+                <img src="https://via.placeholder.com/150" alt="Gamee Icon">
                 <a href="https://t.me/gamee/start?startapp=ref_1956860053">Gamee</a>
             </div>
         </main>
