update ads holders

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         type="image/png"> <!-- Favicon -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1995884550459895"
         crossorigin="anonymous"></script>
+    <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
 </head>
 
 <body>
@@ -115,30 +116,58 @@
                         alt="Gamee Icon">
                     <a href="https://t.me/gamee/start?startapp=ref_1956860053">Gamee</a>
                 </div>
+                <amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-1995884550459895"
+                    data-ad-slot="4857660417" data-auto-format="rspv" data-full-width="">
+                    <div overflow=""></div>
+                </amp-ad>
             </section>
             <section id="collections" class="item">
                 <h2>Colecciones</h2>
                 <!-- Contenido de colecciones -->
+                <amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-1995884550459895"
+                    data-ad-slot="4857660417" data-auto-format="rspv" data-full-width="">
+                    <div overflow=""></div>
+                </amp-ad>
             </section>
             <section id="tools" class="item">
                 <h2>Herramientas</h2>
                 <!-- Contenido de herramientas -->
+                <amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-1995884550459895"
+                    data-ad-slot="4857660417" data-auto-format="rspv" data-full-width="">
+                    <div overflow=""></div>
+                </amp-ad>
             </section>
             <section id="exchanges" class="item">
                 <h2>Exchanges</h2>
                 <!-- Contenido de exchanges -->
+                <amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-1995884550459895"
+                    data-ad-slot="4857660417" data-auto-format="rspv" data-full-width="">
+                    <div overflow=""></div>
+                </amp-ad>
             </section>
             <section id="amazon" class="item">
                 <h2>Amazon</h2>
                 <!-- Contenido de Amazon -->
+                <amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-1995884550459895"
+                    data-ad-slot="4857660417" data-auto-format="rspv" data-full-width="">
+                    <div overflow=""></div>
+                </amp-ad>
             </section>
             <section id="social" class="item">
                 <h2>Redes Sociales</h2>
                 <!-- Contenido de redes sociales -->
+                <amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-1995884550459895"
+                    data-ad-slot="4857660417" data-auto-format="rspv" data-full-width="">
+                    <div overflow=""></div>
+                </amp-ad>
             </section>
             <section id="daily-combos" class="item">
                 <h2>Daily Combos Telegram</h2>
                 <!-- Contenido de Daily Combos Telegram -->
+                <amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-1995884550459895"
+                    data-ad-slot="4857660417" data-auto-format="rspv" data-full-width="">
+                    <div overflow=""></div>
+                </amp-ad>
             </section>
             <section id="ads" class="item">
                 <h2>Publicidad</h2>
