--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         type="image/png"> <!-- Favicon -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1995884550459895"
         crossorigin="anonymous"></script>
-    <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
+
 </head>
 
 <body>
@@ -30,21 +30,27 @@
     <aside class="sidebar">
         <ul>
             <li><a href="#games" class="tooltip"><span class="material-icons">sports_esports</span><span
-                        class="tooltiptext">Juegos NFTs</span></a></li>
-            <li><a href="#collections" class="tooltip"><span class="material-icons">collections</span><span
-                        class="tooltiptext">Colecciones</span></a></li>
+                        class="tooltiptext">Crypto Games</span></a></li>
             <li><a href="#tools" class="tooltip"><span class="material-icons">build</span><span
-                        class="tooltiptext">Herramientas</span></a></li>
+                        class="tooltiptext">Tools</span></a></li>
             <li><a href="#exchanges" class="tooltip"><span class="material-icons">swap_horiz</span><span
                         class="tooltiptext">Exchanges</span></a></li>
             <li><a href="#amazon" class="tooltip"><span class="material-icons">shopping_cart</span><span
                         class="tooltiptext">Amazon</span></a></li>
             <li><a href="#social" class="tooltip"><span class="material-icons">group</span><span
-                        class="tooltiptext">Redes
-                        Sociales</span></a></li>
+                        class="tooltiptext">Social</span></a></li>
             <li><a href="#daily-combos" class="tooltip"><span class="material-icons">schedule</span><span
                         class="tooltiptext">Daily Combos Telegram</span></a></li>
         </ul>
+        <script async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1995884550459895"
+            crossorigin="anonymous"></script>
+        <!-- AdsVertical -->
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1995884550459895"
+            data-ad-slot="8631848926" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
         <ul class="social-icons">
             <li><a href="https://www.youtube.com/channel/UCXX3S1RI4iahIcbsOl_m3gw" target="_blank"
                     aria-label="YouTube"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100"
@@ -95,91 +101,113 @@
         </div>
         <main>
             <section id="games" class="item">
-                <h2>Juegos NFTs</h2>
+                <h2>Crypto Games</h2>
                 <div class="game-item">
-                    <img src="https://cdn4.cdn-telegram.org/file/EPilzrmvg99Tm54IXNpR5EUCOzCNcyiXcsGblT-Odb0RjFx2mVDQZx7NFz7uGpgPqt_pq8ECIgNiJYSSfZK515iafL_oEG-MnSdxoDQK8ZMWKrKHJhGegva7fMG7yXA5cCvkvap1BfBViEb9a0AMwLVlXxG25BYlZr6EclAkh53SLtKPmjE5w26jYgPSnLcQv28JQsbcl0wgGrssdkp2Jp7QLxe7z62x34zw-qnYoONPFAWNC9bJ6tdG6zDpMaC_Ey0PCQpkHOF68Lh_vYcYCvnRp0E1lANQegK7eCDjSt_C3e7awDhKYcn40pDTo4TSZg8rj2ZaYgonwNUevrh2bw.jpg"
+                    <img src="https://th.bing.com/th/id/OIG1.nBOOrBYmtT2NrDm8c_vj?w=1024&h=1024&rs=1&pid=ImgDetMain"
                         alt="Tap Monsters Icon">
                     <a href="https://t.me/tapmonsters_bot/start?startapp=ref1956860053">Tap Monsters</a>
                 </div>
                 <div class="game-item">
-                    <img src="https://cdn4.cdn-telegram.org/file/mlo4fQD8D7vmMFOOm-Qgg_KLzRn8mm8axJvFgFvABk7fzWAw9aFxQd6RlC9CHVPK1sjUA0Y-EWrYDHQxC1aVOIoRTYBVrRsXJHAKUHQqg2HOIRgxGVrCfeVB8QDNGYJMEDBk2etLqDWo9Pd72SYPEUrZamsFZbhiGWxHGISgm5IhzEgIAjZgrJFE0FgGncUi4y-Dtsc9tqdEBdQGaL2uKX58KHLWiJ3G7YJUusWp0zOj7AdQwEKazX-Fib9nKSObz3pp7khYQM4qX2y9fVzY8FWV7s1yT_NDZaygo-VrhHEw4yoS3PumBnf8HlypJJFXf8za9APwPGsjKwf-QCA9iw.jpg"
-                        alt="Hamster Kombat Icon">
+                    <img src="https://th.bing.com/th/id/OIG2.DSLB6FQVuAcWu6fHI6uj?pid=ImgGn" alt="Hamster Kombat Icon">
                     <a href="https://t.me/hamsTer_kombat_bot/start?startapp=kentId1956860053">Hamster Kombat</a>
                 </div>
                 <div class="game-item">
-                    <img src="https://cdn1.cdn-telegram.org/file/GhTA4Xh3B2qi9h2qzMuEXOXbuC587rsWeU_kIvF5GrdbZ67W1V16KG2Tp0z8C4-31krcJiCmA9wIBb8f8vgR8_Wr-BdgY8khSETMMpBg43DK5wi6aEcFguSntda70z3oXRkLWxRXzxKoZ5HAiTzGg4YfaU1mZKyf1pa3MFhulWgwRSL4YYjcuFvdmtlxf3FS06cCBk1KXXu4X9HYmeVO5EM6er3HwqZRxzuLMFYW7gY-htLX5sLpNrOosKlt693vfprF84qUpLSBLHwWgWfKqm7baRlWe8tQi6QvyUFHhHlWhtDXntBnWUP1Wnmm6z0-AbMrREtDNxMaz2a2AbmT6A.jpg"
+                    <img src="https://th.bing.com/th/id/OIG1.seIbZIm01EEsmTPK8F.Q?w=1024&h=1024&rs=1&pid=ImgDetMain"
                         alt="Kuroro Ranch Icon">
                     <a href="https://t.me/KuroroRanchBot/ranch?startapp=ref-AA59F343">Kuroro Ranch</a>
                 </div>
                 <div class="game-item">
-                    <img src="https://cdn4.cdn-telegram.org/file/QUNJy_z-3nIkK1OAeLevSSk_0y78imNYNSdOSaG6K8RFuaBHxxAR98qrlHXxBuSV4wMQPkci5tW7kdQIkL_xe0me9f-qR-kQcCqFCRMipsnhY-O5bEKrNeBN_EqUAfPuns0pHJx7GYg9VelS0pBS7cgP8tZavRfKQzdpcPLHzzge99uEy9NQqWOKsaKFn5t6AKIpj3O9vwa1_7Jn5XeIuw0dCIpSNH0b7GvYhIPEq3ONaRbeSfBL6K4ymjPZCnTBwH2T7uRrqt9JLHASc36NnYN0by69MbFuU-jrkrYNACo6Glo9x4rDNRD8FulB6kfS9AVvTyMCAxF6FEYNBYN4lA.jpg"
+                    <img src="https://th.bing.com/th/id/OIG3.UnYk44q84wHAAWsrI7GI?w=1024&h=1024&rs=1&pid=ImgDetMain"
                         alt="Gamee Icon">
                     <a href="https://t.me/gamee/start?startapp=ref_1956860053">Gamee</a>
                 </div>
-                <amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-1995884550459895"
-                    data-ad-slot="4857660417" data-auto-format="rspv" data-full-width="">
-                    <div overflow=""></div>
-                </amp-ad>
             </section>
-            <section id="collections" class="item">
-                <h2>Colecciones</h2>
-                <!-- Contenido de colecciones -->
-                <amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-1995884550459895"
-                    data-ad-slot="4857660417" data-auto-format="rspv" data-full-width="">
-                    <div overflow=""></div>
-                </amp-ad>
-            </section>
+            <script async
+                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1995884550459895"
+                crossorigin="anonymous"></script>
+            <!-- AdsHorizontal -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1995884550459895"
+                data-ad-slot="8488378697" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
             <section id="tools" class="item">
                 <h2>Herramientas</h2>
                 <!-- Contenido de herramientas -->
-                <amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-1995884550459895"
-                    data-ad-slot="4857660417" data-auto-format="rspv" data-full-width="">
-                    <div overflow=""></div>
-                </amp-ad>
             </section>
+            <script async
+                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1995884550459895"
+                crossorigin="anonymous"></script>
+            <!-- AdsHorizontal -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1995884550459895"
+                data-ad-slot="8488378697" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
             <section id="exchanges" class="item">
                 <h2>Exchanges</h2>
                 <!-- Contenido de exchanges -->
-                <amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-1995884550459895"
-                    data-ad-slot="4857660417" data-auto-format="rspv" data-full-width="">
-                    <div overflow=""></div>
-                </amp-ad>
             </section>
+            <script async
+                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1995884550459895"
+                crossorigin="anonymous"></script>
+            <!-- AdsHorizontal -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1995884550459895"
+                data-ad-slot="8488378697" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
             <section id="amazon" class="item">
                 <h2>Amazon</h2>
                 <!-- Contenido de Amazon -->
-                <amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-1995884550459895"
-                    data-ad-slot="4857660417" data-auto-format="rspv" data-full-width="">
-                    <div overflow=""></div>
-                </amp-ad>
             </section>
+            <script async
+                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1995884550459895"
+                crossorigin="anonymous"></script>
+            <!-- AdsHorizontal -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1995884550459895"
+                data-ad-slot="8488378697" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
             <section id="social" class="item">
                 <h2>Redes Sociales</h2>
                 <!-- Contenido de redes sociales -->
-                <amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-1995884550459895"
-                    data-ad-slot="4857660417" data-auto-format="rspv" data-full-width="">
-                    <div overflow=""></div>
-                </amp-ad>
             </section>
+            <script async
+                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1995884550459895"
+                crossorigin="anonymous"></script>
+            <!-- AdsHorizontal -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1995884550459895"
+                data-ad-slot="8488378697" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
             <section id="daily-combos" class="item">
                 <h2>Daily Combos Telegram</h2>
                 <!-- Contenido de Daily Combos Telegram -->
-                <amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-1995884550459895"
-                    data-ad-slot="4857660417" data-auto-format="rspv" data-full-width="">
-                    <div overflow=""></div>
-                </amp-ad>
             </section>
+            <script async
+                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1995884550459895"
+                crossorigin="anonymous"></script>
+            <!-- AdsHorizontal -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1995884550459895"
+                data-ad-slot="8488378697" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
             <section id="ads" class="item">
                 <h2>Publicidad</h2>
                 <!-- Contenido de publicidad -->
-                <div class="ads-placeholder">
-                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-XXXXXX" data-ad-slot="YYYYYY"
-                        data-ad-format="auto"></ins>
-                    <script>
-                        (adsbygoogle = window.adsbygoogle || []).push({});
-                    </script>
-                </div>
+                <script async
+                    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1995884550459895"
+                    crossorigin="anonymous"></script>
+                <!-- AdsHorizontal -->
+                <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1995884550459895"
+                    data-ad-slot="8488378697" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
             </section>
         </main>
     </div>
